# cricbuzzpy

./: README.md  setup.cfg
cricbuzzpy/: player.py
