[metadata]
name = cricbuzz-stats
version = 0.0.2
author = Shiva Shankar
author_email = siv6146@gmail.com
description = A pythonic interface to Cricbuzz that extracts Player stats
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/shiv6146/cricbuzzpy
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
[options]
packages = find:
python_requires = >=3.7
include_package_data = True